# gui_garden

./: Cargo.toml  README.md  index.html
.claude/: settings.local.json
src/: about.rs  app.rs  lib.rs  main.rs  palette.rs
src/apps/: binary_clock.rs  calculator.rs  canvas_view.rs  collections.rs  fractal_clock.rs  mod.rs  projects.rs  workouts.rs
src/apps/easy_mark/: easy_mark_parser.rs  easy_mark_viewer.rs  mod.rs
src/digital_garden/: frontmatter.rs  graph_view.rs  history.rs  markdown_parser.rs  mod.rs  note.rs  note_directory.rs  search.rs  sidebar.rs  theme.rs  watcher.rs
