[package]
name = "digital_garden"
version = "0.1.0"
authors = ["josh <pythonicqualms@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
num = "0.4.0"
num-bigint = "0.4.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }
# eframe = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
