[package]
name = "digital_garden"
version = "0.1.0"
authors = ["josh <pythonicqualms@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

chrono = ["egui_extras/datepicker"]

## Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "egui_extras/serde"]

## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).
syntect = ["egui_extras/syntect"]

[dependencies]
egui = "0.31.1"
egui_extras = { version = "*", features = ["default", "syntect", "all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
eframe = { version = "0.31.1", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
chrono = { version = "0.4", features = ["serde"] }
num = "0.4.0"
num-bigint = "0.4.3"
serde_json = "1.0.140"
serde_yaml = "0.9.21"
rand = "0.8.5"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ehttp = "0.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
rfd = "0.15"
notify = "6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Document", "Window", "Location", "History", "console"] }
# `rand` → `getrandom` needs an explicit backend on wasm targets.
getrandom = { version = "0.2", features = ["js"] }


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }
# eframe = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
